Fix content overflow due to comments on mobile

--- a/assets/css/comments.css
+++ b/assets/css/comments.css
@@ -236,6 +236,10 @@
 }
 
 @media screen and (max-width: 600px) {
+    .post-comment {
+        max-width: 70vw;
+    }
+
     .post-comment-header {
         flex-direction: column;
         text-align: center;
